k8s/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    enzo: "true"
  labels:
    app: hideyuki-mizuta-pipeline-from-scratch
    app.kubernetes.io/instance: hideyuki-mizuta-pipeline-from-scratch
    app.kubernetes.io/name: hideyuki-mizuta-pipeline-from-scratch
  name: hideyuki-mizuta-pipeline-from-scratch
  namespace: hideyuki-mizuta-pipeline-from-scratch
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: hideyuki-mizuta-pipeline-from-scratch
    app.kubernetes.io/name: hideyuki-mizuta-pipeline-from-scratch
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/hmizuta-express-sample-app
    enzo: "true"
  labels:
    app: hideyuki-mizuta-pipeline-from-scratch
    app.kubernetes.io/instance: hideyuki-mizuta-pipeline-from-scratch
    app.kubernetes.io/name: hideyuki-mizuta-pipeline-from-scratch
    app.openshift.io/runtime: js
  name: hideyuki-mizuta-pipeline-from-scratch
  namespace: hideyuki-mizuta-pipeline-from-scratch
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: hideyuki-mizuta-pipeline-from-scratch
      app.kubernetes.io/name: hideyuki-mizuta-pipeline-from-scratch
  template:
    metadata:
      annotations:
        enzo: "true"
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: hideyuki-mizuta-pipeline-from-scratch
        app.kubernetes.io/name: hideyuki-mizuta-pipeline-from-scratch
    spec:
      containers:
      - env:
        - name: INGRESS_HOST
        - name: PROTOCOLS
        - name: LOG_LEVEL
          value: debug
        image: quay.io/hmizuta/express-sample-app
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 3000
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: hideyuki-mizuta-pipeline-from-scratch
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-options: Validate=false
    enzo: "true"
    openshift.io/host.generated: "true"
  name: akpfs
  namespace: hideyuki-mizuta-pipeline-from-scratch
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: hideyuki-mizuta-pipeline-from-scratch
    weight: 100
  wildcardPolicy: None
